Added title and credits

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <body>
+<div><font size="12">SLS Patternizer</font><br />by 🦖Corbin Trexler</div>
+<br /><br />
 <select id="dropDown"></select>
 <br /><br />
 Grid Width: <input type="text" id="gridWidth" size="2" value="5">
@@ -8,7 +10,7 @@ Grid Height: <input type="text" id="gridHeight" size="2" value="5">
 <br /><br />
 <button type="button" onclick="patternize()">Patternize!</button>
 <br /><br />
-<textarea id="codeDisplay" rows="20" cols="75">Choose a component and grid side and PATTERNIZE!</textarea>
+<textarea id="codeDisplay" rows="20" cols="75">Choose a component and grid size and PATTERNIZE!</textarea>
 <br /><br />
 File name: <input id="filename" type="text" id="gridHeight" size="20" value="example_name.slj">
 <br /><br />
