--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ File name: <input id="filename" type="text" id="gridHeight" size="20" value="exa
 <button type="button" onclick="download()">Download As File</button>
 
 <script type="text/javascript">
-var slsCode;
+var slsCode = {"HEADER":{"TAG":"PROJECT","APP_VERSION": 71},"COMPONENTS":[],"DEPENDENCIES":{}};
 var s = new CanvasState(document.getElementById('canvas1'));
 s.addShape(new Shape(-500,-500,1500,1500, 'rgba(60, 60, 60, 1)'),"id","tag");
 //s.addShape(new Shape(40,40,50,50)); // The default is gray
@@ -87,9 +87,6 @@ for(var m = 0; m < compArray.length; m++) {
 function patternize() {
     var e = document.getElementById("dropDown");
     var selectedComp = JSON.parse(e.options[e.selectedIndex].value);
-
-    slsCode = {"HEADER":{"TAG":"PROJECT","APP_VERSION": 71},"COMPONENTS":[],"DEPENDENCIES":{}};
-    slsCode.HEADER.APP_VERSION = 72000;
 
     var comp = selectedComp;
     var compWidth = comp.SIZE[0].X;
