--- a/index.html
+++ b/index.html
@@ -1,24 +1,132 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-<script type="text/javascript" src="shape.js"></script>
-</head>
-<body>
-<div><font size="12">SLS Companion App</font><br />by 🦖Corbin Trexler</div>
-<br /><br />
-<select id="dropDown"></select>
-<br /><br />
-Grid Width: <input type="text" id="gridWidth" size="2" value="5">
-Grid Height: <input type="text" id="gridHeight" size="2" value="5">
-<br /><br />
-<button type="button" onclick="patternize()">Patternize!</button>
-<br /><br />
-<textarea id="codeDisplay" rows="35" cols="50">Choose a component and grid size and PATTERNIZE!</textarea>
-<canvas id="canvas1" width="600" height="530" style="border:1px solid #d3d3d3;"></canvas>
-<br /><br />
-File name: <input id="filename" type="text" id="gridHeight" size="20" value="example_name.slj">
-<br /><br />
-<button type="button" onclick="download()">Download As File</button>
-<script type="text/javascript" src="sls_components.js"></script>
-</body>
+    <head>
+        <script type="text/javascript" src="shape.js"></script>
+        <style>
+            html, body {
+                background-color: #272a39;
+                color: white;
+                overflow: hidden;
+            }
+            #title {
+                font-size: 50px;
+                color: white;
+                margin-right: 20px;
+            }
+            #credits {
+                font-size: 20px;
+                color: white;
+            }
+            #d {
+                position: absolute;
+                bottom: 0;
+                left: 20px;
+                z-index: 100;
+            }
+            #code {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                z-index: 100;
+            }
+            #toggleCode {
+                float: right;
+            }
+            #codeDisplay {
+                display: none;
+            }
+            #gridmaker {
+                display: flex;
+                align-items: center;
+            }
+            #download {
+                float: left;
+                margin-bottom: 20px;
+            }
+            #canvas1 {
+                position: relative;
+                z-index: 0;
+                top: 40px;
+                border: 1px solid #999;
+                background-color: #272a39;
+            }
+            button {
+                background-color: #0277d6; /* Green */
+                color: white;
+                border: 1px solid white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                cursor: pointer;
+                }
+                
+            .styled-select select {
+                background: transparent;
+                width: 268px;
+                color: white;
+                padding: 5px;
+                font-size: 16px;
+                line-height: 1;
+                border: 0;
+                border-radius: 0;
+                height: 34px;
+                background-color: #0277d6;
+                -webkit-appearance: none;
+            }
+            .styled-select {
+                width: 240px;
+                height: 34px;
+                overflow: hidden;
+                position: absolute;
+                margin-right: 20px;
+                top: 60px;
+                right: 0;
+                z-index: 100;
+                background-color: #0277d6;
+                border: 1px solid #fff;
+            }
+        </style>
+        <script>
+            function toggleCodeDisplay() {
+                var cd = document.getElementById('codeDisplay');
+                if (cd.style.display == 'inline') {
+                    cd.style.display = 'none';
+                }
+                else {
+                    cd.style.display = 'inline';
+                }
+            };
+        </script>
+    </head>
+    <body>
+            <canvas id="canvas1" width="3000" height="2000"></canvas>
+            <div class="styled-select">
+                <select id="dropDown"></select>
+            </div>
+            <div id="d">
+                <br /><br />
+                <div id="gridmaker">
+                    <span>
+                        Grid Width: <input type="text" id="gridWidth" size="2" value="5" style="margin-right: 10px; margin-bottom: 10px"><br />
+                        Grid Height: <input type="text" id="gridHeight" size="2" value="5" style="margin-right: 10px">
+                    </span>
+                    <button type="button" onclick="patternize()">Patternize!</button>
+                </div>
+                <br /><br />
+                <div id="download">
+                    File name: <input id="filename" type="text" id="gridHeight" size="20" value="example_name.slj">
+                    <button type="button" onclick="download()">Download As File</button>
+                </div>
+                <br /><br />
+                <span id="title">SLS Companion App</span><br /><span id="credits">by 🦖Corbin Trexler</span>
+            </div>
+            <div id="code">
+                <textarea id="codeDisplay" rows="50" cols="60">Choose a component and grid size and PATTERNIZE!</textarea>
+                <br />
+                <button type="button" id="toggleCode" onclick="toggleCodeDisplay()">Hide/Show Code</button>
+            </div>
+        <script type="text/javascript" src="sls_components.js"></script>
+    </body>
 </html>
