Added clearCanvas() and wireMode toolbar buttons

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                     <button onclick="button_download()">💾</button>
                     <button style="font-size: 55px; padding: 3px 18px 4px 18px" onclick="button_grid()">▦</button>
                     <button onclick="clearCanvas()">❌</button>
+                    <button id="wireMode" onclick="wireMode(this)" style="background:#0277d6">⛓</button>
                 </div>
                 <span id="title">SLS Companion App</span><br /><span id="credits">by 🦖Corbin Trexler</span>
             </div>
